--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<!--{{appTitle}} in parent
-<app-title [(title)]="appTitle" (change)="countChange($event)"></app-title>-->
+<!--{{appTitle}} in parent <app-title [(title)]="appTitle" (change)="countChange($event)"></app-title>-->
