--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -2,44 +2,38 @@
   <div class="col-md-6 offset-md-3">
     <div class="form-group mt-3">
       <label for="noteTitle">Note title</label>
-       <input type="email" class="form-control" id="noteTitle" aria-describedby="emailHelp" [(ngModel)]="title" placeholder="Enter some note title" (keyup.enter)="title ? addNote() : 0">
-    <div *ngIf="title" class="mt-3">
-      <label for="noteText">Note text</label>
-       <textarea *ngIf="title"class="form-control" id="noteText" rows="3" [(ngModel)]="text" (keyup.enter)="addNote()"></textarea>
-    </div>
-     
- 
-        <small id="todoFieldNote" class="form-text text-muted">
+      <input type="email" class="form-control" id="noteTitle" aria-describedby="emailHelp" [(ngModel)]="title" placeholder="Enter some note title"
+        (keyup.enter)="title ? addNote() : 0">
+      <div *ngIf="title" class="mt-3">
+        <label for="noteText">Note text</label>
+        <textarea *ngIf="title" class="form-control" id="noteText" rows="3" [(ngModel)]="text" (keyup.enter)="addNote()"></textarea>
+      </div>
+      <small id="todoFieldNote" class="form-text text-muted">
           <span *ngIf="!title">Please add note title</span>
           <span *ngIf="title">Please add some text for <strong>{{title}}</strong></span>
-        </small>
-           <div class="mt-3" *ngIf="title">
+      </small>
+      <div class="mt-3" *ngIf="title">
         <ul class="note-types">
           <ng-container *ngFor="let type of NoteTypeEnum | enumIterator">
-      <li class="p-2" [ngClass]="{active:type.key == tag}" (click)="selectTag(type.value)">
-        {{type.key}}
-      </li>
-      </ng-container>
-    </ul>
-     </div>
+            <li class="p-2" [ngClass]="{active:type.key == tag}" (click)="selectTag(type.value)">
+              {{type.key}}
+            </li>
+          </ng-container>
+        </ul>
+      </div>
     </div>
-   
- 
     <div>
       <div class="list-group">
-  <a href="javascript:void(0)" class="list-group-item list-group-item-action flex-column align-items-start" [ngClass]="{active: selectedNote && note.id === selectedNote.id}" *ngFor="let note of notes; let i = index" (click)="selectNote(note)">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">{{note.title}}</h5>
-    </div>
-    <p class="mb-1">{{note.text}}</p>
-    <small class="mb-1">{{note.tag}}</small>
-  </a>
-</div>
-
-<h3 *ngIf="notes && !notes.length">There is no notes</h3>
-
-
+        <a href="javascript:void(0)" class="list-group-item list-group-item-action flex-column align-items-start" [ngClass]="{active: selectedNote && note.id === selectedNote.id}"
+          *ngFor="let note of notes; let i = index" (click)="selectNote(note)">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">{{note.title}}</h5>
+          </div>
+          <p class="mb-1">{{note.text}}</p>
+          <small class="mb-1">{{note.tag}}</small>
+        </a>
+      </div>
+      <h3 *ngIf="notes && !notes.length">There is no notes</h3>
     </div>
   </div>
-
 </div>
